fix: align styling to live view

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -141,6 +141,24 @@
   @apply text-[#3b4ea3] underline hover:text-blue-900 focus:ring-2 focus:ring-blue-500 focus:outline-none;
 }
 
+.ql-editor {
+  p {
+    @apply mb-4 text-left text-base leading-relaxed;
+  }
+
+  ul {
+    @apply mb-4 list-disc text-base pl-5;
+  }
+
+  ol {
+    @apply mb-4 list-decimal text-base pl-5;
+  }
+
+  li {
+    @apply mb-1 text-base;
+  }
+}
+
 /* Custom SVG-Background Utilities */
 @utility bg-geschichte {
   @apply bg-cover bg-center;
